syntax = "proto3";

option csharp_namespace = "Codidact.Core.Api";

package member;

// The Member service definition.
service Member {
  // Creates a member
  rpc CreateMember (MemberCreationRequest) returns (MemberCreationReply);
}

// The request message containing the user's name.
message MemberCreationRequest {
  string display_name = 1;
  int64 user_id = 2;
  
}

// The response message containing the greetings.
message MemberCreationReply {
  string message = 1;
  bool success = 2;
}
